--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,4 +1,7 @@
+if (current.source !== 'index')
+  != partial('_partials/nav')
+
 != partial('_partials/header')
-.content
+.page
   != yield
 != partial('_partials/footer')
