--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -1,6 +1,15 @@
+footer
+  p Copyright &copy;
+    =' ' + name + ' 2014'
+  ul.social-links
+    li: a(href=twitter)='@'+handle
+    li: a(href=github) SeeThruHead on Github
+    li: a(href=email) shane.keulen@gmail.com
+
+script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+//- Jquery local fallback
+script window.jQuery || document.write('<script src="scripts/jquery.min.js"><\/script>')
 //- Add your site or application content here
-script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-script. window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
 script(src="scripts/bundle.js")
 //- Google Analytics: change UA-XXXXX-X to be your site's ID.
 //-
