--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -6,7 +6,8 @@ html.no-js
     title= title
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel="stylesheet", href="styles/main.css")
+    link(rel="stylesheet", href="/styles/main.css")
+    link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans', rel='stylesheet', type='text/css')
     //-script(src='js/vendor/modernizr-2.7.1.min.js')
   body
     <!--[if lt IE 8]>
