--- a/public/styles/_stylus/main.styl
+++ b/public/styles/_stylus/main.styl
@@ -1,7 +1,23 @@
+// import globals from from harp.json
+harp = json('../../../harp.json', {hash: true})
+// import stylus partials
+@require 'mixins/*'
+@require 'reset'
+@require 'colors'
+@require 'type'
+@require 'hero'
+@require 'nav'
+
 body
-  background-color purple
-  h1
-    color grey
-    fixed bottom right
-  h2
-    color blue
+  height 4000px
+.social-links
+  list-inline(1em)
+.photo
+  border-radius 50%
+  max-width 100%
+  //get the photo URL from harp.json
+  photo = harp.globals.photo
+  background-image url(photo)
+  background-size cover
+  background-position top -30px center
+  size(400)
