--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,1 +1,250 @@
-body{background-color:#800080;}body h1{color:#808080;position:fixed;bottom:0;right:0;}body h2{color:#00f}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+body {
+  line-height: 1;
+  color: #000;
+  background: #fff;
+}
+ol,
+ul {
+  list-style: none;
+}
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  vertical-align: middle;
+}
+caption,
+th,
+td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+a img {
+  border: none;
+}
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+button {
+  cursor: pointer;
+}
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: #323641;
+  color: #fff;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+h1 {
+  font-size: 90px;
+}
+h3 {
+  font-size: 48px;
+}
+#hero {
+  background-image: url("/images/toronto.jpg");
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  text-align: center;
+  background-color: #323641;
+  color: #fff;
+}
+#hero:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+}
+.hero-content {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+  left: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.hero-name {
+  color: #fc5653;
+}
+.blurb {
+  color: #9395a1;
+  margin: 33px 0 86px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+.site-nav {
+  width: 100%;
+  margin-top: -81px;
+  height: 81px;
+  position: relative;
+  line-height: 81px;
+  background-color: #fc5653;
+}
+.site-nav a {
+  text-decoration: none;
+  color: #fff;
+  -webkit-transition: color 0.5s ease;
+  -moz-transition: color 0.5s ease;
+  -o-transition: color 0.5s ease;
+  -ms-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.site-nav a:hover {
+  color: #9395a1;
+}
+.site-nav ul {
+  text-align: center;
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.site-nav ul > li {
+  display: inline-block;
+}
+.site-nav ul > li + li {
+  margin-left: 9%;
+}
+@media (max-width: 600px) {
+  .site-nav ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .site-nav ul > li {
+    display: inline-block;
+  }
+  .site-nav ul > li + li {
+    margin-left: 3%;
+  }
+}
+body {
+  height: 4000px;
+}
+.social-links {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.social-links > li {
+  display: inline-block;
+}
+.social-links > li + li {
+  margin-left: 1em;
+}
+.photo {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  max-width: 100%;
+  background-image: url("/images/headshot.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  background-position: top -30px center;
+  width: 400;
+  height: 400;
+}
