Initial prod release

--- a/public/about.jade
+++ b/public/about.jade
@@ -16,4 +16,5 @@ section.about
       p Throughout my time at HackerYou I realized I have a fervent interest in development efficiency. I find myself spending hours each day researching the most recent and up and coming technologies/concepts used in front end development and push myself to implement a new tool or paradigm in each new project I work on.
       p If you're looking for someone who is concerned with pushing out maintainable, performant code employing the cutting edge of Front End development techniques please
         a(href="/contact.html")  get in touch.
-      button Download Resume
+      form(method='get' action='Shane_Keulen_Resume.pdf')
+        button Download Resume
