--- a/public/styles/_stylus/globals.styl
+++ b/public/styles/_stylus/globals.styl
@@ -1,6 +1,7 @@
 @require 'mixins/_border-box'
 border-box()
-
+.page
+  clearfix()
 sectionstyle(shade = 'dark')
   padding 116px 0 121px 0
   h2:after
