--- a/public/styles/_stylus/main.styl
+++ b/public/styles/_stylus/main.styl
@@ -14,3 +14,4 @@ $fa-font-path = '../../fonts/font-awesome-stylus/fonts'
 @require 'footer'
 @require 'about'
 @require 'skills'
+@require 'portfolio'
