--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -7,6 +7,7 @@ html.no-js
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel="stylesheet", href="/styles/main.css")
+    link(rel='shortcut icon', href='favicon.ico')
     link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans', rel='stylesheet', type='text/css')
     //-script(src='js/vendor/modernizr-2.7.1.min.js')
   body
