--- a/public/_partials/nav.jade
+++ b/public/_partials/nav.jade
@@ -7,4 +7,5 @@
       li: a(href="/about.html") About Me
     li: a(href="/skills.html") Skills
     li: a(href="/portfolio.html") Portfolio
-    li: a(href="/contact.html") Contact
+    //- li: a(href="/contact.html") Contact
+    li: a(href="http://blog.shanekeulen.com") Blog
