--- a/public/styles/_stylus/type.styl
+++ b/public/styles/_stylus/type.styl
@@ -11,6 +11,9 @@ h1
 h2
   font-size 72px
   line-height 60px
+  @media screen and (max-width: 360px)
+    font-size 60px
+    line-height 48px
 h3
   font-size 48px
 h4
