fixed the skills page, still needs to be made responsive

--- a/public/about.jade
+++ b/public/about.jade
@@ -15,6 +15,6 @@ section.about
         |  while researching secondary education and took their part-time course. It lit in me the desire to get back into programming and so I decided to enroll in their full time class. With the skills I've acquired I would like to get to work building performant and responsive web applications as soon as possible.
       p Throughout my time at HackerYou I realized I have a fervent interest in development efficiency. I find myself spending hours each day researching the most recent and up and coming technologies/concepts used in front end development and push myself to implement a new tool or paradigm in each new project I work on.
       p If you're looking for someone who is concerned with pushing out maintainable, performant code employing the cutting edge of Front End development techniques please
-        a(href="/contact.html")  get in touch.
+        a(href=email)  get in touch.
       form(method='get' action='Shane_Keulen_Resume.pdf')
         button Download Resume
