--- a/public/skills.jade
+++ b/public/skills.jade
@@ -1,35 +1,34 @@
 section.skills
-  .container
-    .slide
-      h2 My <br>Expertise
-      p.main I have experience employing current web Technologies such as HTML5, CSS3 and ECMAScript 5. I've been focussing myself on creating organized, maintainable code regardless of what language it's in. I believe that my code should be accessible to anyone and employ the concept of progressive enhanceme to achieve those goals.
-      p.main I pride myself on producing clean, encapsulated and well documented Javascript with an eye toward performance and optimization.
-      p.main Outside of technical skills my ability to understand new concepts and get working immediately with new technologies and frameworks means that I will always be able to work with the cutting edge of web development technologies and techniques.
-
-
-    .slide.hidden
-      h2 HTML
-      p.main I engineer HTML. I use it to create the skelaton and structure with which to build interesting and engaging web experiences. I write it with the aim of maintainability and reuseabilty via semantic markup and the concepts of modularity.
-      p.main I'm both excited and concerned by the up and coming web frameworks that intend to extend HTML's capabilities. While on one hand the prospect of dynamic html though Javascript frameworks and web components is incredibly attractive, it could pose too many device and accessiblity restrictions and erode the html underpinnings of the web.
-    .slide.hidden
-      h2 CSS
-      p.main Before really delving into Javascript, CSS was the language I spent the most time dedicated too. I feel like good CSS is hard to write. It takes a great deal of forthought and experience, careful planning and dutiful refactoring. You must take into account the reuseabilty of your code as well as manage the challenges posed by cross browser compatibility.
-      p.main You must also keep in mind how your styling and layout will transfer from mobile to the desktop and vice-versa. But the results can truly be something to be proud of. In the future I would very much like to work in a team that takes pride in producing maintainablem organized and efficient modular CSS.
-    .slide.hidden
-      h2 Javascript
-      p.main Javscript is where the larger part of my interest lies. I find the concepts of closures, modules and asynchronous execution fascinating and truly expressive. I've worked with jQuery for dom manipulation and for AJAX. I've used Javascript to communicate with Restful APIs and to manipulate large sets of data. I've got a great understanding of object oriented programming techniques as well as some more Javascript specific ideas like prototypal inheritance.
-      p.main In the future I would like to transition to doing some server side Javascript work with node.js. I also am very curious particularily interested in isomorphic javascript ideas like those used by AirBnB as well as the Meteor framework. The idea of being able to maintain one logic and code base across the front and back end seems like it would be an ideal evolution.
-    .slide.hidden
-      h2 Tooling
-      p.main Ever since writing the first few lines of HTML in HackerYou's part time class I realized that the process of crafting web pages strictly using text was not a all ideal. This fueled me to look into a number of producivity tools and to come across tools that not only help productivity but also increase performance and maintainability of the code base.
-      p.main I have used Jade, Handlebars, lodash templates, Stylus, Sass, Gulp, Grunt, Yeoman, Slush, Bowserify, Bower and many more. My favorites being Jade, Stylus, and Gulp, because of the way they use Javascript to bring together a consistant and effiecient developement environment.
-
-.skillgrid
-  .category.html
-    h4 HTML
-  .category.css
-    h4 CSS
-  .category.javascript
-    h4 Javascript
-  .category.tools
-    h4 Tools
+  ul.skill-sel
+    li: button html
+    li: button CSS
+    li: button Javscript
+    li: button Tools
+  .view-port
+    .page-view
+      .slide
+        .container
+          h2 My <br>Expertise
+          p.main I have experience employing current web Technologies such as HTML5, CSS3 and ECMAScript 5. I've been focused on creating organized, maintainable code regardless of what language it's in. I believe that my code should be accessible to anyone and employ the concept of progressive enhanceme to achieve those goals.
+          p.main I pride myself on producing clean, encapsulated and well documented Javascript with an eye toward performance and optimization.
+          p.main Outside of technical skills my ability to understand new concepts and get working immediately with new technologies and frameworks means that I will always be able to work with the cutting edge of web development technologies and techniques.
+      .slide
+        .container
+          h2 HTML
+          p.main I engineer HTML. I use it to create the skeleton and structure with which to build interesting and engaging web experiences. I write it with the aim of maintainability and reuseabilty via semantic markup and the concepts of modularity.
+          p.main I'm both excited and concerned by the up and coming web frameworks that intend to extend HTML's capabilities. While on one hand the prospect of dynamic html though Javascript frameworks and web components is incredibly attractive, it could pose too many device and accessiblity restrictions and erode the html underpinnings of the web.
+      .slide
+        .container
+          h2 CSS
+          p.main Before really delving into Javascript, CSS was the language I spent the most time dedicated too. I feel like good CSS is hard to write. It takes a great deal of forthought and experience, careful planning and dutiful refactoring. You must take into account the reuseabilty of your code as well as manage the challenges posed by cross browser compatibility.
+          p.main You must also keep in mind how your styling and layout will transfer from mobile to the desktop and vice-versa. But the results can truly be something to be proud of. In the future I would very much like to work in a team that takes pride in producing maintainablem organized and efficient modular CSS.
+      .slide
+        .container
+          h2 Javascript
+          p.main Javscript is where the larger part of my interest lies. I find the concepts of closures, modules and asynchronous execution fascinating and truly expressive. I've worked with jQuery for dom manipulation and for AJAX. I've used Javascript to communicate with Restful APIs and to manipulate large sets of data. I've got a great understanding of object oriented programming techniques as well as some more Javascript specific ideas like prototypal inheritance.
+          p.main In the future I would like to transition to doing some server side Javascript work with node.js. I also am very curious particularily interested in isomorphic javascript ideas like those used by AirBnB as well as the Meteor framework. The idea of being able to maintain one logic and code base across the front and back end seems like it would be an ideal evolution.
+      .slide
+        .container
+          h2 Tooling
+          p.main Ever since writing the first few lines of HTML in HackerYou's part time class I realized that the process of crafting web pages strictly using text was not a all ideal. This fueled me to look into a number of producivity tools and to come across tools that not only help productivity but also increase performance and maintainability of the code base.
+          p.main I have used Jade, Handlebars, lodash templates, Stylus, Sass, Gulp, Grunt, Yeoman, Slush, Bowserify, Bower and many more. My favorites being Jade, Stylus, and Gulp, because of the way they use Javascript to bring together a consistant and effiecient developement environment.
