--- a/public/styles/_stylus/skills.styl
+++ b/public/styles/_stylus/skills.styl
@@ -1,36 +1,20 @@
 section.skills
+  .view-port
+    overflow hidden
+  .page-view
+    transition all .5s ease
+    width 500%
   sectionstyle('light')
-  padding-bottom 121px
-p.main
-  margin-bottom 30px
-  line-height 1.6
-.slide
-  // height 60vh
-  overflow hidden
-  // margin-bottom 121px
-.skillgrid
-  cursor pointer
-  background-color color-accent
-  height 150px
-.hidden
-  // display none
-  height 0
-  opacity 0
-.category
-  transition all 0.2s ease
-  &:hover
-    background-color shade(color-accent, 30%)
-    h4
-      color tint(color-bgdark, 90%)
-  border-right 1px solid shade(color-accent, 30%)
-  &:last-child
-    border-right none
-  h4
-    transition color .2s ease
-    font-size 40px
-    color lighten(color-bgdark, 10%)
-    line-height 141px
-    vertical-align middle
+  padding-top 80px
+  padding-bottom 111px
+  p.main
+    margin-bottom 30px
+    line-height 1.6
+.skill-sel
   text-align center
-  width 25%
-  float left
+  list-inline(2em)
+  padding-bottom 116px
+.slide
+  width 20%
+  display inline-block
+  vertical-align top
