--- a/public/skills.jade
+++ b/public/skills.jade
@@ -2,7 +2,7 @@ section.skills
   ul.skill-sel
     li: button html
     li: button CSS
-    li: button Javscript
+    li: button Javascript
     li: button Tools
   .view-port
     .page-view
