--- a/public/styles/_stylus/mixins/_center-trans.styl
+++ b/public/styles/_stylus/mixins/_center-trans.styl
@@ -20,7 +20,7 @@ center-trans($axis = false)
   transform: $translate-val
 $center-trans
   scut-center-trans()
-$center-transform-x
+$center-trans-x
   scut-center-trans(x)
-$center-transform-y
+$center-trans-y
   scut-center-trans(y)
