--- a/public/styles/_stylus/nav.styl
+++ b/public/styles/_stylus/nav.styl
@@ -13,6 +13,8 @@
     font-family opens
     text-transform uppercase
     font-size 14px
+    @media screen and (max-width: 340px)
+      font-size 13px
     &:hover
       color shade(color-accent, 30%)
   ul
