--- a/public/styles/_stylus/globals.styl
+++ b/public/styles/_stylus/globals.styl
@@ -7,6 +7,8 @@ sectionstyle(shade = 'dark')
   h2:after
     content ''
     width 360px
+    @media screen and (max-width: 450px)
+      width 250px
     @media screen and (max-width: 360px)
       width 200px
     height 11px
