--- a/public/styles/_stylus/hero.styl
+++ b/public/styles/_stylus/hero.styl
@@ -4,20 +4,26 @@
   background-position center center
   background-size cover
   height 100vh
+  @media screen and (max-height: 900px)
+    height 800px
   text-align center
   background-color color-bg
   color white
   &:before
     content ''
     size(100%)
+    @media screen and (max-height: 900px)
+      height 800px
     position absolute
     top 0
     left 0
-    height 100%
+    // height 100%
     background-color rgba(0,0,0,.7)
 .hero-content
   width 100%
   center-trans()
+  @media screen and (max-height: 900px)
+    top 300px
 .hero-name
   color color-accent
 .blurb
@@ -25,3 +31,5 @@
   margin 33px 0 86px
   font-family mont
   font-size 18px
+  @media screen and (max-width: 360px)
+    font-size 16px
