--- a/public/styles/_stylus/skills.styl
+++ b/public/styles/_stylus/skills.styl
@@ -13,8 +13,24 @@ section.skills
 .skill-sel
   text-align center
   list-inline(2em)
+  @media screen and (max-width: 550px)
+    list-inline(1em)
+  @media screen and (max-width: 450px)
+    list-inline(.3em)
   padding-bottom 116px
 .slide
   width 20%
   display inline-block
   vertical-align top
+  h2
+    @media screen and (max-width: 550px)
+      font-size 60px
+      line-height 48px
+      &:after
+        width 300px
+    @media screen and (max-width: 450px)
+      font-size 45px
+      line-height 33px
+    @media screen and (max-width: 360px)
+      font-size 40px
+      line-height  32px
