--- a/public/styles/_stylus/type.styl
+++ b/public/styles/_stylus/type.styl
@@ -8,6 +8,8 @@ h1,h2,h3,h4,h5
   text-transform uppercase
 h1
   font-size 90px
+  @media screen and (max-width: 360px)
+    font-size 80px
 h2
   font-size 72px
   line-height 60px
@@ -16,6 +18,8 @@ h2
     line-height 48px
 h3
   font-size 48px
+  @media screen and (max-width: 360px)
+    font-size 40px
 h4
   font-size 27px
   text-transform none
