--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -124,6 +124,11 @@ h5 {
 h1 {
   font-size: 90px;
 }
+@media screen and (max-width: 360px) {
+  h1 {
+    font-size: 80px;
+  }
+}
 h2 {
   font-size: 72px;
   line-height: 60px;
@@ -136,6 +141,11 @@ h2 {
 }
 h3 {
   font-size: 48px;
+}
+@media screen and (max-width: 360px) {
+  h3 {
+    font-size: 40px;
+  }
 }
 h4 {
   font-size: 27px;
@@ -236,6 +246,11 @@ button.selected {
   background-color: color-bg;
   color: #fff;
 }
+@media screen and (max-height: 900px) {
+  #hero {
+    height: 800px;
+  }
+}
 #hero:before {
   content: '';
   width: 100%;
@@ -243,8 +258,12 @@ button.selected {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
   background-color: rgba(0,0,0,0.7);
+}
+@media screen and (max-height: 900px) {
+  #hero:before {
+    height: 800px;
+  }
 }
 .hero-content {
   width: 100%;
@@ -263,6 +282,11 @@ button.selected {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+@media screen and (max-height: 900px) {
+  .hero-content {
+    top: 300px;
+  }
+}
 .hero-name {
   color: #fc5653;
 }
@@ -271,6 +295,11 @@ button.selected {
   margin: 33px 0 86px;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
+}
+@media screen and (max-width: 360px) {
+  .blurb {
+    font-size: 16px;
+  }
 }
 .site-nav {
   width: 100%;
@@ -293,6 +322,11 @@ button.selected {
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   font-size: 14px;
+}
+@media screen and (max-width: 340px) {
+  .site-nav a {
+    font-size: 13px;
+  }
 }
 .site-nav a:hover {
   color: #b03c3a;
@@ -469,6 +503,11 @@ section.about h2:after {
   margin-top: 33px;
   margin-bottom: 42px;
 }
+@media screen and (max-width: 450px) {
+  section.about h2:after {
+    width: 250px;
+  }
+}
 @media screen and (max-width: 360px) {
   section.about h2:after {
     width: 200px;
@@ -542,6 +581,11 @@ section.skills h2:after {
   margin-top: 33px;
   margin-bottom: 42px;
 }
+@media screen and (max-width: 450px) {
+  section.skills h2:after {
+    width: 250px;
+  }
+}
 @media screen and (max-width: 360px) {
   section.skills h2:after {
     width: 200px;
@@ -572,10 +616,59 @@ section.skills p.main {
 .skill-sel > li + li {
   margin-left: 2em;
 }
+@media screen and (max-width: 550px) {
+  .skill-sel {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .skill-sel > li {
+    display: inline-block;
+  }
+  .skill-sel > li + li {
+    margin-left: 1em;
+  }
+}
+@media screen and (max-width: 450px) {
+  .skill-sel {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .skill-sel > li {
+    display: inline-block;
+  }
+  .skill-sel > li + li {
+    margin-left: 0.3em;
+  }
+}
 .slide {
   width: 20%;
   display: inline-block;
   vertical-align: top;
+}
+@media screen and (max-width: 550px) {
+  .slide h2 {
+    font-size: 60px;
+    line-height: 48px;
+  }
+  .slide h2:after {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .slide h2 {
+    font-size: 45px;
+    line-height: 33px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .slide h2 {
+    font-size: 40px;
+    line-height: 32px;
+  }
 }
 .portfolio {
   padding: 116px 0 121px 0;
@@ -592,6 +685,11 @@ section.skills p.main {
   display: block;
   margin-top: 33px;
   margin-bottom: 42px;
+}
+@media screen and (max-width: 450px) {
+  .portfolio h2:after {
+    width: 250px;
+  }
 }
 @media screen and (max-width: 360px) {
   .portfolio h2:after {
